Fix options buttons being the wrong size

--- a/style.css
+++ b/style.css
@@ -779,7 +779,6 @@ button.exlinks-options-entry-input {
 	float: right;
 	padding: 0.125em 0.25em;
 	margin: 0;
-	min-width: 18%;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	background-color: transparent;
